# MC-Agent-Kit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build_knowledge_base.py  pyproject.toml  test_launch.py  test_launch_full.py  test_launcher.py
.github/workflows/: ci.yml
data/: knowledge_base.json
docs/: DESIGN.md  ITERATIONS.md  KNOWLEDGE_BASE.md  NEXT_ITERATION.md  PRINCIPLES.md  PROJECT_DESIGN.md  ROADMAP.md  VISION.md  api-changelog.md  best-practices.md  developer-guide.md  error-codes.md  iteration_48_content.md  iterations-31-summary.md  iterations-59-summary.md
docs/api/: README.md
docs/api/cli_llm/: chat.md  commands.md  config.md  output.md
docs/api/plugins/: hooks.md
docs/en/: PRINCIPLES.md  README.md  VISION.md
docs/en/user/: configuration.md  faq.md  getting-started.md  installation.md
docs/user/: api-usage-stats.md  cli-reference.md  code-analysis.md  configuration.md  debugger.md  faq.md  getting-started.md  hot-reload.md  installation.md  memory-optimization.md  modsdk-enhanced.md  plugin-best-practices.md  plugin-debugging.md  plugin-development.md  templates.md  troubleshooting.md  workflow-guide.md
docs/user-guide/: README.md  chat-mode.md  code-generation.md  code-review.md  configuration.md  custom-prompts.md  error-diagnosis.md  first-project.md  installation.md  plugin-development.md  quick-start.md  troubleshooting.md
docs/user/tutorial/: custom-entity.md  custom-item.md  hello-world.md
examples/: knowledge_example.py
examples/custom-entity/: README.md  frost_ghost.py  mod.json
examples/custom-entity/entities/: frost_ghost.json
examples/custom-item/: README.md  frost_essence.py  mod.json
examples/custom-item/items/: frost_essence.json
examples/custom-item/recipes/: frost_essence.json
examples/custom-item/texts/: en_US.lang  zh_CN.lang
examples/custom-ui/: README.md  mod.json  ui_demo.py
examples/custom-ui/ui/: demo_screen.json
examples/hello-world/: README.md  hello_world.py  mod.json
examples/network-sync/: README.md
examples/network-sync/behavior_pack/: manifest.json
examples/network-sync/resource_pack/: manifest.json
examples/plugins/codegen_plugin/: README.md  codegen_plugin.py  plugin.json
examples/plugins/debug_plugin/: README.md  debug_plugin.py  plugin.json
examples/plugins/hello_plugin/: README.md  hello_plugin.py  plugin.json
examples/plugins/weather_plugin/: README.md  plugin.json  weather_plugin.py
skills/modsdk-api-search/: SKILL.md
skills/modsdk-autofix/: SKILL.md
skills/modsdk-best-practices/: SKILL.md
skills/modsdk-code-completion/: SKILL.md
skills/modsdk-code-gen/: SKILL.md
skills/modsdk-debug/: SKILL.md
skills/modsdk-event-search/: SKILL.md
skills/modsdk-game-executor/: SKILL.md
skills/modsdk-log-analyzer/: SKILL.md
skills/modsdk-refactor/: SKILL.md
skills/modsdk-semantic-search/: SKILL.md
src/mc_agent_kit/: __init__.py  cli.py  cli_batch.py  cli_optimize.py  cli_plugin.py  cli_workflow.py
src/mc_agent_kit/analysis/: __init__.py  code_analyzer.py
src/mc_agent_kit/autofix/: __init__.py  auto_fixer.py  diagnoser.py  enhanced_diagnosis.py  fixer.py  log_analyzer.py
src/mc_agent_kit/cache/: __init__.py  multi_level_cache.py
src/mc_agent_kit/cli_enhanced/: __init__.py  aliases.py  completion.py  enhanced_repl.py  errors.py  history.py  output.py  repl.py  wizard.py
src/mc_agent_kit/cli_llm/: __init__.py  chat.py  commands.py  config.py  output.py
src/mc_agent_kit/completion/: __init__.py  best_practices.py  completer.py  refactor.py  smells.py
src/mc_agent_kit/config/: __init__.py  manager.py  templates.py  validator.py
src/mc_agent_kit/contrib/: __init__.py
src/mc_agent_kit/debugger/: __init__.py  game_debug.py
src/mc_agent_kit/docs/: __init__.py  examples.py  formatter.py  generator.py  templates.py
src/mc_agent_kit/execution/: __init__.py  debugger.py  executor.py  game_executor.py  hot_reload.py  performance.py
src/mc_agent_kit/generator/: __init__.py  bindings.py  code_gen.py  enhanced_generation.py  enhanced_templates.py  event_gen.py  lint.py  quality_checker.py  template_loader.py  templates.py
src/mc_agent_kit/knowledge/: __init__.py  base.py  enhanced_retriever.py  example_library.py  examples_enhanced.py  incremental.py  index_cache.py  kb_cli.py  knowledge_base.py  retrieval.py  search_cache.py  unified_index.py
src/mc_agent_kit/knowledge_base/: __init__.py  indexer.py  models.py  parser.py  retriever.py
src/mc_agent_kit/launcher/: __init__.py  addon_scanner.py  auto_fixer.py  config_generator.py  diagnoser.py  game_launcher.py
src/mc_agent_kit/llm/: __init__.py  api_doc_generator.py  base.py  code_generation.py  code_review.py  context_manager.py  enhanced_context.py  intelligent_fix.py  manager.py  model_selector.py  providers.py  stream_manager.py  workflow.py
src/tests/: test_cli.py  test_cli_extra.py  test_cli_new_commands.py  test_codegen_skill.py  test_completion.py  test_debugger.py  test_enhanced_retriever.py  test_event_search_skill.py  test_example_library.py  test_execution.py  test_game_executor.py  test_game_launcher.py  test_generator.py  test_hot_reload.py  test_incremental.py  test_iteration_20.py  test_iteration_21.py  test_iteration_22.py  test_iteration_28.py  test_iteration_29.py  test_iteration_30.py  test_iteration_31.py  test_iteration_32.py  test_iteration_33.py  test_iteration_34.py  test_iteration_36.py  test_iteration_37.py  test_iteration_38.py  test_iteration_39.py  test_iteration_40.py  test_iteration_41.py  test_iteration_42.py  test_iteration_43.py  test_iteration_44.py  test_iteration_47.py  test_iteration_48.py  test_iteration_49.py  test_iteration_50.py  test_iteration_50_simple.py  test_iteration_51.py  (+43 more)
test_output/: test_result_2026-03-22_10-56-14.json  test_result_2026-03-22_10-57-29.json  test_result_2026-03-22_10-58-50.json  test_result_2026-03-22_10-59-52.json  test_result_2026-03-22_11-01-20.json  test_result_2026-03-22_11-15-19.json
test_project/behavior_pack/: manifest.json
test_project/resource_pack/: manifest.json
(+136 files in other folders)
