[project]
name = "mc-agent-kit"
version = "0.9.0"
description = "Toolsets and Skills to Empower AI Agent for the development of Minecraft mods"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.0",
]

[project.scripts]
mc-agent = "mc_agent_kit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

# 知识库模块依赖
knowledge = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-chroma>=0.3.0",
    "llama-index-embeddings-huggingface>=0.4.0",
]

# 完整安装（包含所有可选依赖）
all = [
    "mc-agent-kit[dev,knowledge]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true