[project]
name = "mc-agent-kit"
version = "1.19.0"
description = "Toolsets and Skills to empower AI Agents for Minecraft ModSDK development"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [
    { name = "MC-Agent-Kit Contributors" }
]
maintainers = [
    { name = "MC-Agent-Kit Contributors" }
]
keywords = [
    "minecraft",
    "modsdk",
    "ai",
    "agent",
    "code-generation",
    "netease",
    "addon",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.0",
]

[project.scripts]
mc-agent = "mc_agent_kit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=5.0.0",
]

knowledge = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-chroma>=0.3.0",
    "llama-index-embeddings-huggingface>=0.4.0",
]

all = [
    "mc-agent-kit[dev,knowledge]",
]

[project.urls]
Homepage = "https://github.com/your-username/mc-agent-kit"
Documentation = "https://github.com/your-username/mc-agent-kit#readme"
Repository = "https://github.com/your-username/mc-agent-kit.git"
Issues = "https://github.com/your-username/mc-agent-kit/issues"
Changelog = "https://github.com/your-username/mc-agent-kit/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mc_agent_kit"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
