[project]
name = "mc-agent-kit"
version = "1.56.0"
description = "MC-Agent-Kit - AI Agent 工具集，用于 Minecraft 网易版 ModSDK 开发"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "MC-Agent-Kit Team" }
]
keywords = ["minecraft", "modsdk", "ai", "agent", "development-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]
semantic = [
    "llama-index>=0.10.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
    "tiktoken>=0.5.0",
]
all = [
    "mc-agent-kit[semantic,llm,dev]",
]

[project.scripts]
mc-agent = "mc_agent_kit.cli:main"
mc-create = "mc_agent_kit.cli:create_main"
mc-kb = "mc_agent_kit.cli:kb_main"
mc-run = "mc_agent_kit.cli:run_main"
mc-logs = "mc_agent_kit.cli:logs_main"
mc-launcher = "mc_agent_kit.cli:launcher_main"
mc-llm = "mc_agent_kit.cli:llm_main"
mc-gen = "mc_agent_kit.cli:gen_main"
mc-batch = "mc_agent_kit.cli_batch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mc_agent_kit"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
norecursedirs = ["src/tests/_skipped"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# 对核心模块启用严格检查
[[tool.mypy.overrides]]
module = [
    "mc_agent_kit.knowledge.*",
    "mc_agent_kit.knowledge_base.*",
    "mc_agent_kit.generator.code_gen",
    "mc_agent_kit.generator.templates",
    "mc_agent_kit.skills.base",
    "mc_agent_kit.launcher.addon_scanner",
    "mc_agent_kit.launcher.diagnoser",
    "mc_agent_kit.autofix.*",
    "mc_agent_kit.ux.enhanced",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# 对 CLI 和实验性模块放宽检查
[[tool.mypy.overrides]]
module = [
    "mc_agent_kit.cli",
    "mc_agent_kit.cli_optimize",
    "mc_agent_kit.execution.executor",
    "mc_agent_kit.execution.debugger",
    "mc_agent_kit.retrieval.*",
    "mc_agent_kit.contrib.*",
    "mc_agent_kit.docs.*",
    "mc_agent_kit.workflow.*",
    "mc_agent_kit.skills.modsdk.*",
    "mc_agent_kit.generator.bindings",
    "mc_agent_kit.generator.event_gen",
    "mc_agent_kit.generator.quality_checker",
    "mc_agent_kit.log_capture.*",
    "mc_agent_kit.knowledge.retrieval",
    "mc_agent_kit.knowledge.incremental",
    "mc_agent_kit.launcher.diagnoser",
]
ignore_errors = true

[tool.coverage.run]
source = ["src/mc_agent_kit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]